Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.


* fix bug- export ROOT to pkg_pretend invocations.

* pkgcore no longer export PWORKDIR; this was in use via extremely old
  libtool versions as a way to do QA; no longer needed.

* match multirepo portage behaviour; specifically, no longer force overlay
  version shadowing.


pkgcore 0.7.4: Oct 27th, 2011

* fix userprofile stacking for /etc/portage/profile; this fixes a traceback.


pkgcore 0.7.3: Oct 26th, 2011

* speed up directory walking; varies, but ~25% faster.

* pkgcore no longer allows comments in profiles/categories.

* pkgcore now allows profile package.mask and friends as directories for user
  configuration, and within repositories that set profile-formats = portage-1
  in their layout.conf.

* pquery --expr was removed.  Open to re-adding it, but in a maintainable
  form that has testing, and is usable elsewhere.

* pquery now if given no restrictions, defaults to --all.

* pquery argument parsing was rewritten; ordering issues for --config
  were fixed, error messages improved, and general cleanup.

* fix traceback that occurs when unmerging a pkg, but tempspace needs
  to be created.

* initial layout.conf support; thin-manifests, use-manifests, and
  controllable hashes.


pkgcore 0.7.2: Sept 27th, 2011

* bug fixes; fix to pebuild so it works again, bugs spotted by pyflakes,
  etc.  Basically codebase cleanup.

* experimental support added for generating Manifests via pmaint digest.

* pkgcore no longer supports manifest version1; nothing else supports
  it now, it's no longer in use, thus the removal.

* new pmaint 'mirror' command.  This is used for pulling down
  all distfiles that could be required for a specific package.

* operations proxy no longer triggers infinite recursion.


pkgcore 0.7.1: Sept 3rd, 2011

* add TIMESTAMP header to binpkg Packages cache.
