@@ -4,6 +4,11 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* pkgcore now extends masking rules to binpkg repositories; in addition,
+  it now honors 'masters' for masking.  This means repositories that
+  try to suppress an inherited mask that affects that repo, can now
+  do so.
+
 * fix bug- export ROOT to pkg_pretend invocations.
 
 * pkgcore no longer export PWORKDIR; this was in use via extremely old
